<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_settings_two">
                <TextView
                        android:id="@+id/heading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="translation"
                        style="@style/SettingsTextHeading"/>
            </RelativeLayout>
            <View
                    android:id="@+id/headingView1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_black"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"
                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/translation_string"/>
                <Switch
                        android:id="@+id/translationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    style="@style/SettingViewSubLine"
            />
            <RelativeLayout
                    android:id="@+id/selectLanguageView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"

                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/select_lang_string"/>
                <TextView
                        android:text="Language"
                        style="@style/SettingsTextItem"
                        android:textColor="@color/colorGray"
                        android:id="@+id/setlocationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/SettingViewHeadLine"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_settings_two">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/bookmark_string"
                          style="@style/SettingsTextHeading"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/SettingViewHeadLine"
            />
            <RelativeLayout
                    android:id="@+id/bookmarkView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"
                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/manage_bookmark_string"/>
                <ImageView
                        android:text="Location"
                        style="@style/SettingsTextItem"
                        android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/SettingViewHeadLine"/>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/color_settings_two">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/audio_string"
                          style="@style/SettingsTextHeading"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/SettingViewHeadLine"
            />
            <RelativeLayout
                    android:id="@+id/moreAudioView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"

                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/more_audio_options_string"/>
                <ImageView
                        android:text="Location"
                        style="@style/SettingsTextItem"
                        android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    style="@style/SettingViewSubLine"
            />
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"

                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/auto_scroll_string"/>
                <Switch
                        android:id="@+id/autoScrollSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    style="@style/SettingViewSubLine"
            />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    style="@style/SettingViewSubLine"
            />
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"

                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/keep_screen_on_string"/>
                <Switch
                        android:id="@+id/keepScreenOnSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    style="@style/SettingViewSubLine"
            />
            <RelativeLayout
                    android:id="@+id/reciterView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/color_settings_one"

                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          style="@style/SettingsTextItem"
                          android:layout_height="wrap_content"
                          android:text="@string/reciters_string"/>
                <TextView
                        android:text="Reciter"
                        style="@style/SettingsTextItem"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        android:textColor="@color/colorGray"
                        android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    style="@style/SettingViewSubLine"
            />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>