<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">
    <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/rectangle_white"
            android:orientation="vertical"
            android:padding="18dp">
    <EditText
            android:id="@+id/playlistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_small"
            android:padding="@dimen/dimen_small"

            android:layout_gravity="center"
            android:hint="@string/playlist_name_hint"
            android:background="@drawable/rectangle_grey_outline"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/playlist_color_tag"/>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal">
        <ImageView
                android:id="@+id/ivColorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/circle_playlist_dots"/>
        <ImageView
                android:id="@+id/ivColorDarkBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/circle_playlist_dots"/>
        <ImageView
                android:id="@+id/ivColorGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/circle_playlist_dots"/>
        <ImageView
                android:id="@+id/ivColorLightBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/circle_playlist_dots"/>
        <ImageView
                android:id="@+id/ivColorOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/circle_playlist_dots"/>
        <ImageView
                android:id="@+id/ivColorYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/circle_playlist_dots"/>
    </LinearLayout>
    <TextView
            android:id="@+id/btnAddPlaylist"
            fontPath="fonts/gothic-b.TTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/rectangle_grey_outline"
            android:textSize="@dimen/textsize_normal"
            android:text="@string/add_playlist"/>
</LinearLayout>
</LinearLayout>